--- a/templates/partials/user_sidebar.html
+++ b/templates/partials/user_sidebar.html
@@ -7,10 +7,11 @@
       Dashboard
     </a>
 
-    <a class="{{ 'active' if active_page == 'requests' else '' }}" 
-       href="#">
-      My Requests
+    <a class="{{ 'active' if active_page == 'integrations' else '' }}"
+    href="/dashboard/integrations">
+    Integrations
     </a>
+
 
     <a class="{{ 'active' if active_page == 'notifications' else '' }}" 
        href="#">
