--- a/templates/partials/admin_sidebar.html
+++ b/templates/partials/admin_sidebar.html
@@ -17,15 +17,19 @@
       <span class="nav-text">Dashboard</span>
     </a>
 
-    <a class="nav-link" href="#">
-      <span class="nav-icon">📋</span>
-      <span class="nav-text">Requests</span>
-    </a>
+  <a class="nav-link {% if request.endpoint == 'dashboard.admin_requests' %}active{% endif %}"
+    href="{{ url_for('dashboard.admin_requests') }}">
+    <span class="nav-icon">📋</span>
+    <span class="nav-text">Requests</span>
+  </a>
 
-    <a class="nav-link" href="#">
-      <span class="nav-icon">👥</span>
-      <span class="nav-text">Users</span>
-    </a>
+
+    <a class="nav-link {% if request.endpoint == 'dashboard.admin_users' %}active{% endif %}"
+   href="{{ url_for('dashboard.admin_users') }}">
+  <span class="nav-icon">👥</span>
+  <span class="nav-text">Users</span>
+  </a>
+
 
     <a class="nav-link {% if request.endpoint == 'dashboard.admin_integrations' %}active{% endif %}" 
        href="{{ url_for('dashboard.admin_integrations') }}">
